--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,28 @@
 	<name>Hello World Web Application Repository</name>
 	<description>Simplest possible Java Webapp</description>
 
+	<distributionManagement>
+        <repository>
+           <id>nexus-snapshots</id>
+           <url>http://192.168.161.245:8081/nexus/content/repositories/releases</url>
+        </repository>
+        </distributionManagement>
+	
 	<build>
 		<plugins>
+			<plugin>
+   <artifactId>maven-deploy-plugin</artifactId>
+   <version>2.8.1</version>
+   <executions>
+      <execution>
+         <id>default-deploy</id>
+         <phase>deploy</phase>
+         <goals>
+            <goal>deploy</goal>
+         </goals>
+      </execution>
+   </executions>
+</plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
