--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<distributionManagement>
         <repository>
            <id>nexus-snapshots</id>
-           <url>http://192.168.0.28:8081/nexus/content/repositories/releases</url>
+           <url>http://${NEXUS_IP}:8081/nexus/content/repositories/releases</url>
         </repository>
         </distributionManagement>
 	
